# atomadic-nexus-sdk

./: README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: 01_trust_gate.py  02_x402_payment.py
src/atomadic_nexus/: __init__.py  cli.py  client.py  exceptions.py  mcp_server.py
src/atomadic_nexus_sdk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_client.py  test_imports.py
